--- a/dashboard.html
+++ b/dashboard.html
@@ -137,7 +137,7 @@
     }
 
     async function fetchTechnicalIndicators(filename) {
-        const response = await fetch(`https://das-group-app.wonderfulsand-54b7b33b.australiaeast.azurecontainerapps.io/api/stocks/${filename}`);
+        const response = await fetch(`https://das-group-app.wonderfulsand-54b7b33b.australiaeast.azurecontainerapps.io/api/indicators/${filename}`);
         const technicalIndicators = await response.json();
 
         const summarySection = document.querySelector('.summary');
