--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StockPipeMK about</title>
-    <link rel="stylesheet" href="../static/css/homestyle.css">
+    <link rel="stylesheet" href="/static/css/homestyle.css">
 </head>
 <body>
 
